# 2019_GROUP_32

./: .gitignore  .travis.yml  .txt  NEWS.md  README.md  TEAM.md  cell.cpp  cell.h  generateDocumentationAndDeploy.sh
Model_Loading_Library/: CMakeLists.txt  Doxyfile  ExampleModel1.mod
Model_Loading_Library/include/: cell.h  hexahedron.h  material.h  matrix.h  model.h  pyramid.h  tetrahedron.h  vector.h
Model_Loading_Library/src/: Pyramid.cpp  cell.cpp  hexahedron.cpp  material.cpp  matrix.cpp  model.cpp  pyramid.cpp  tetrahedron.cpp  vector.cpp
Model_Loading_Library/test/: ExampleModel1.mod  autoTest1.cpp  main.cpp  matrixTest.cpp  matrixTestMain.cpp  modelTest.cpp  modelTestMain.cpp  vectorTest.cpp
Model_Viewer_Application/: CMakeLists.txt  README.md  cell.cpp  cell.h  dialogcolor.cpp  dialogcolor.h  dialogcolor.ui  dialogeditclipfilter.cpp  dialogeditclipfilter.h  dialogeditclipfilter.ui  dialogeditshrinkfilter.cpp  dialogeditshrinkfilter.h  dialogeditshrinkfilter.ui  hexahedron.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.h  pyramid.h  tetrahedron.h
